--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,36 +1,37 @@
 name: GBFS Scraper
 
-# 1) “schedule” tells GitHub to run this on a cron schedule.
+# Trigger every 10 minutes
 on:
   schedule:
-    - cron: '*/10 * * * *'  # “*/10” means every 10 minutes
+    - cron: '*/10 * * * *'
 
 jobs:
   scrape:
-    # 2) This spins up a fresh Ubuntu VM.
     runs-on: ubuntu-latest
 
     steps:
-      # 3) Get your code
-      - uses: actions/checkout@v3
+      # 1) Grab your repo code
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      # 4) Install Python (choose your version)
-      - name: Set up Python
+      # 2) Install Python
+      - name: Set up Python 3.x
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      # 5) Install dependencies
+      # 3) Install dependencies
       - name: Install requests
         run: pip install requests
 
-      # 6) Run your script
-      - name: Run scraper
+      # 4) Run the scraper script (no loop/sleep inside!)
+      - name: Run GBFS scraper
         run: python bikeshare_scraper.py
-        
-      # 7) Save the CSVs as build artifacts
+
+      # 5) Upload CSVs even if the script failed
       - name: Upload CSV logs
-        uses: actions/upload-artifact@v4.6.2
+        if: always()
+        uses: actions/upload-artifact@v3
         with:
           name: gbfs-logs
           path: |
